# coursera-course-recommender

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  quality.yml
models/: metadata.json
notebooks/: 01_exploratory_data_analysis.ipynb  02_data_cleaning_transformation.ipynb  03_modeling_evaluation.ipynb
scripts/: download_data.sh  train_models.py
src/course_recommender/: __init__.py
src/course_recommender/data/: __init__.py  cleaner.py  loader.py  validator.py
src/course_recommender/mlops/: __init__.py  ab_testing.py  mlflow_utils.py
src/course_recommender/models/: __init__.py  evaluator.py  recommender.py
src/course_recommender/utils/: config.py  logger.py
tests/: __init__.py  conftest.py  test_data_cleaner.py  test_evaluator.py  test_recommender.py
